[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pong_Scene/Pong.gd" type="Script" id=1]
[ext_resource path="res://Pong_Scene/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pong_Scene/Ball.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 480, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 216 )

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://Pong_Scene/Pixellari.ttf"

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = SubResource( 3 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="SideWalls" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideWalls"]
position = Vector2( 440, -8 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SideWalls"]
position = Vector2( 440, 408 )
shape = SubResource( 1 )

[node name="BackWall" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="left" type="CollisionShape2D" parent="BackWall"]
position = Vector2( -48, 200 )
shape = SubResource( 2 )

[node name="right" type="CollisionShape2D" parent="BackWall"]
position = Vector2( 928, 200 )
shape = SubResource( 2 )

[node name="PaddlePlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, 208 )

[node name="PaddleAI" parent="." instance=ExtResource( 2 )]
position = Vector2( 856, 208 )
is_AI = true

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 448, 192 )

[node name="ScoreLeft" type="Label" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.6, 0.552941, 0.466667, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreRight" type="Label" parent="."]
margin_left = 688.0
margin_top = 64.0
margin_right = 752.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.6, 0.552941, 0.466667, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="BackWall" to="." method="_on_BackWall_body_entered"]
[connection signal="timeout" from="RoundStartTimer" to="." method="_on_RoundStartTimer_timeout"]
